# ormsgpack

./: .gitignore  .readthedocs.yml  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  dependabot.yml  noxfile.py  ormsgpack.pyi  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
benchmarks/: bench_dataclass.py  bench_non_str_keys.py  bench_numpy.py  bench_packb.py  bench_pydantic.py  bench_unpackb.py  requirements.txt
benchmarks/samples/: canada.mpack  citm_catalog.mpack  github.mpack  twitter.mpack
docs/: api.rst  changelog.rst  conf.py  generate_examples.py  index.rst  types.rst  usage.rst
docs/examples/: example.py  example.txt  example_dataclass.py  example_dataclass.txt  example_date.py  example_date.txt  example_datetime.py  example_datetime.txt  example_default.py  example_default.txt  example_default_2.py  example_default_2.txt  example_enum.py  example_enum.txt  example_ext_hook.py  example_ext_hook.txt  example_numpy.py  example_numpy.txt  example_opt_naive_utc.py  example_opt_naive_utc.txt  example_opt_non_str_keys.py  example_opt_non_str_keys.txt  example_opt_non_str_keys_2.py  example_opt_non_str_keys_2.txt  example_opt_omit_microseconds.py  example_opt_omit_microseconds.txt  example_opt_passthrough_big_int.py  example_opt_passthrough_big_int.txt  example_opt_passthrough_uuid.py  example_opt_passthrough_uuid.txt  example_opt_sort_keys.py  example_opt_sort_keys.txt  example_opt_sort_keys_2.py  example_opt_sort_keys_2.txt  example_opt_utc_z.py  example_opt_utc_z.txt  example_pydantic.py  example_pydantic.txt  example_time.py  example_time.txt  (+2 more)
python/ormsgpack/: __init__.py  __init__.pyi
scripts/: bench_target.py  benchmark.sh  develop.sh  lint.sh  profile.sh  test-in-container.sh
src/: exc.rs  ext.rs  ffi.rs  io.rs  lazy.rs  lib.rs  opt.rs  state.rs  typeref.rs  unicode.rs  util.rs
src/deserialize/: cache.rs  deserializer.rs  error.rs  mod.rs
src/ffi/: critical_section.rs  int.rs  mod.rs  unicode.rs
src/ffi/base/: int.rs  mod.rs  unicode.rs
src/ffi/cpython/: int.rs  mod.rs  unicode.rs  unicode_state.rs
src/msgpack/: array.rs  bin.rs  bool.rs  ext.rs  float.rs  int.rs  map.rs  marker.rs  mod.rs  nil.rs  str.rs
src/serialize/: bytearray.rs  bytes.rs  dataclass.rs  datetime.rs  datetimelike.rs  default.rs  dict.rs  ext.rs  int.rs  list.rs  memoryview.rs  mod.rs  numpy.rs  pydantic.rs  serializer.rs  str.rs  tuple.rs  uuid.rs  writer.rs
tests/: requirements.txt  test_api.py  test_bool.py  test_bytes.py  test_canonical.py  test_circular.py  test_concurrency.py  test_dataclass.py  test_datetime.py  test_default.py  test_dict.py  test_enum.py  test_ext_type.py  test_float.py  test_int.py  test_list.py  test_non_str_keys.py  test_none.py  test_numpy.py  test_pydantic.py  test_sort_keys.py  test_str.py  test_subclass.py  test_tuple.py  test_type.py  test_typeddict.py  test_types.py  test_uuid.py
