[package]
name = "ormsgpack"
version = "1.12.0"
description = "Fast, correct Python msgpack library supporting dataclasses, datetimes, and numpy"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aviramha/ormsgpack"
homepage = "https://github.com/aviramha/ormsgpack"
readme = "README.md"
keywords = ["fast", "msgpack", "dataclass", "dataclasses", "datetime"]
include = [
    "/build.rs",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/pyproject.toml",
    "/python",
    "/README.md",
    "/src",
]

[lib]
name = "ormsgpack"
crate-type = ["cdylib"]

[features]
default = []

# Use SIMD intrinsics. This requires Rust on the nightly channel.
unstable-simd = [
    "bytecount/generic-simd",
]

[dependencies]
ahash = { version = "0.8", default-features = false }
bytecount = { version = "^0.6.9", default-features = false, features = ["runtime-dispatch-simd"] }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
chrono = { version = "0.4.42", default-features = false }
half = { version = "2.6.0", default-features = false }
itoa = { version = "1", default-features = false }
pyo3 = { version = "^0.27.1", default-features = false, features = ["extension-module"] }
serde = { version = "1", default-features = false }
serde_bytes = { version = "0.11.19", default-features = false, features = ["std"] }
simdutf8 = { version = "0.1.5", default-features = false, features = ["std"] }
smallvec = { version = "^1.15", default-features = false, features = ["union", "write"] }

[build-dependencies]
pyo3-build-config = { version = "^0.27.0" }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"
