[project]
name = "ormsgpack"
repository = "https://github.com/aviramha/ormsgpack"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "msgpack",
    "mypy",
    "numpy; platform_machine != 'armv7l'",
    "pendulum; platform_machine != 'armv7l' and python_version < '3.13'",
    "pydantic",
    "pytest",
    "pytest-benchmark",
    "python-dateutil",
    "pytz",
    "ruff",
    "types-python-dateutil",
    "types-pytz",
    "tzdata",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
python-source = "python"

[tool.mypy]
exclude = "benchmarks"
strict = true

[[tool.mypy.overrides]]
module = ["msgpack"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "I",
  "RUF",
]
ignore = [
  "E501",
  "RUF022",
  "RUF023",
]

[tool.ruff.lint.isort]
known-first-party = ["ormsgpack"]
