[project]
name = "ormsgpack"
version = "1.12.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
authors = [
    {name = "Aviram Hassan", email = "aviramyhassan@gmail.com"},
    {name = "Emanuele Giaquinta", email = "emanuele.giaquinta@gmail.com"},
]

[dependency-groups]
dev = [
    "msgpack",
    "mypy",
    "numpy; platform_machine != 'armv7l' and platform_python_implementation != 'GraalVM'",
    "pendulum; platform_machine != 'armv7l'",
    "pydantic",
    "pytest",
    "pytest-benchmark",
    "python-dateutil",
    "pytz",
    "ruff",
    "types-python-dateutil",
    "types-pytz",
    "tzdata",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
python-source = "python"

[tool.mypy]
exclude = "benchmarks"
strict = true

[[tool.mypy.overrides]]
module = ["msgpack", "pendulum"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
src = ["python"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "I",
  "RUF",
]
ignore = [
  "E501",
  "RUF022",
  "RUF023",
]

[tool.ruff.lint.isort]
known-first-party = ["ormsgpack"]

[tool.uv]
cache-keys = [
  { file = "**/*.rs" },
  { file = "Cargo.lock" },
  { file = "Cargo.toml" },
  { file = "pyproject.toml" },
]

[project.entry-points.pyinstaller40]
hook-dirs = "ormsgpack._pyinstaller:get_hook_dirs"
